# APEXTopologyReconfiguration

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  design_doc.md  mvp-spec.md  pyproject.toml  report.xml  reviewer_response.md  reviewer_response_final.md  test_cp_fixtures.py  validate_a5_jsonl.py  verify_fixes.sh
apex/: harness.py
artifacts/: .gitkeep
docs/: llm_architecture.md  llm_implementation_summary.md  llm_installation.md  llm_parallel_implementation.md  pr15_final_review_response.md  pr15_technical_fixes.md
scripts/: compute_cp.py  compute_lift.py  gather_metrics.py  generate_oracle_smoke.py  generate_real_task_list.py  generate_swe_fixtures.py  make_task_list.py  normalize_jsonl.py  pick_best_static.py  run_eval_success_at_budget.py  run_swe_mock.py  validate_jsonl.py  validate_swe_jsonl.py
tests/: generate_epoch_gating_artifact.py  generate_mcp_denial_logs.py  generate_retry_samples.py  stubs.py  test_a2a_chain_topology.py  test_a2a_flat_topology.py  test_a2a_ingress_chain_enforcement.py  test_a2a_ingress_epoch_gating.py  test_a2a_ingress_topology_switch.py  test_a2a_sdk_integration.py  test_a2a_sdk_optional_imports.py  test_a2a_star_topology.py  test_a2a_topology_switch_runtime.py  test_agents_chain_end_to_end.py  test_agents_flat_end_to_end.py  test_agents_star_end_to_end.py  test_agents_switch_mid_episode.py  test_artifact_schema.py  test_bandit_determinism.py  test_bandit_latency.py  test_best_static_filter_real.py  test_bootstrap_lift.py  test_bootstrap_pairing_invariance.py  test_controller_active_compat.py  test_coordinator_fsm.py  (+49 more)
(+199 files in other folders)
