[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-framework"
version = "0.0.1"
description = "APEX Framework — MVP-First scaffolding (M0–M2)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "APEX Team" }]
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "aiohttp>=3.9",
    "black>=24.3.0",
    "ruff>=0.4.1",
    "isort>=5.13.2",
    "pre-commit>=3.6",
]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
include = ["apex*"]